# Judge

./: .gitignore  __init__.py  evaluate.ipynb  pyproject.toml  retrieval_judge.py
processed_data/: questions_corpus.json
test/: test_retrieval_judge.py
utils/: evaluation.py  plotting.py  preprocess.py  type.py
