[tool.poetry]
name = "judge"
version = "0.1.0"
description = "A RAG Evaluation package"
authors = ["chloedia <chloedaems0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.52"
llama-index-postprocessor-cohere-rerank = "^0.1.7"
matplotlib = "^3.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
