[tool.poetry]
name = "judge"
version = "0.1.0"
description = "A RAG Evaluation package"
authors = ["chloedia <chloedaems0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.52"
llama-index-postprocessor-cohere-rerank = "^0.1.7"
matplotlib = "^3.9.1"
langchain = "^0.2.7"
langchain-text-splitters = "^0.2.2"
datasets = "^2.20.0"
pytest = "^8.2.2"
seaborn = "^0.13.2"
quivr-core = "^0.0.8"
langchain-community = "^0.2.7"
langchain-openai = "^0.1.15"
faiss-cpu = "^1.8.0.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
